# algo-practice

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark-bin  main  test_zset
docs/: memo_20260523  queue_design.md
src/: main.c  main.cpp
src/array/: two_sum.c  two_sum.cpp  two_sum.h
src/past_questions/: utokyo_cs_2022.c  utokyo_cs_2022.h
src/sort/: basic_sort.c  basic_sort.h
src/tests/: benchmark.c  benchmark_tree.c  test_basic_sort.c  test_binary_search.c  test_binary_search.cpp  test_dynarray.c  test_linked_list.c  test_queue.c  test_stack.c  test_tree.c  test_two_sum.c  test_two_sum.cpp  test_zset.c
src/tree/: allocator.c  allocator.h  avl_tree.c  avl_tree.h  binary_tree.c  binary_tree.h  bst.c  bst.h  debug.c  debug.h  iterator.c  iterator.h  rb_tree.c  rb_tree.h  serializer.c  serializer.h  tree_base.c  tree_base.h
src/utils/: dynarray.h  hashtable.c  hashtable.h  linked_list.c  queue_array.h  skiplist.c  skiplist.h  zset.c  zset.h
test_zset.dSYM/Contents/: Info.plist
test_zset.dSYM/Contents/Resources/DWARF/: test_zset
test_zset.dSYM/Contents/Resources/Relocations/aarch64/: test_zset.yml
utils/: dynarray.c  dynarray.h  linked_list.h  queue_array.c  queue_list.c  queue_list.h  stack.c  stack.h
